[workspace]

members = [
    "lab4_1_to_2",
    "lab4_2",
    "lab4_3",
    "lab5_1_to_2",
    "lab5_3",
    "lab5_4",
    "lab6_1_to_2",
    "lab6_3",
    "lab6_4",
    "lab7_1_to_2",
    "lab7_3",
    "lab7_4",
    "lab8_1_to_2",
    "lab8_3",
    "lab9_1_to_2",
    "lab9_3",
    "lab9_4_1",
    "lab9_4_2",
    "svg_gen",
    "point_layer",
    "lab10_3",
    "lab10_1",
    "lab11_1_2",
    "lab11_3",
    "lab11_4",
]
