[package]
name = "lab10_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
float-cmp = "0.9.0"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "lab10_3"
path = "src/bin/exercise_three.rs"

[[bin]]
name = "lab10_4"
path = "src/bin/exercise_four.rs"
