[package]
name = "lab9_4_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
csv = "1"
regex = "1"
rand = "0.8"
point_layer = { path = "../point_layer" }
svg_gen = { path = "../svg_gen" }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
